// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`FormModalHeaderWrapper renders children and buttons correctly 1`] = `
<div>
  <div
    class="html-div x1ghz6dp x1717udv xet4sn1 x13zp6ng x78zum5 xdt5ytf x1us19tq x5yr21d xh8yej3"
    data-theme="dark"
  >
     
    <div
      class="sc-bRKDuR dGUPt"
    >
      <div
        class="sc-hvigdm dEdrNg"
      >
         
        <div
          data-testid="test-children"
        >
          Test Children
        </div>
         
      </div>
      <div
        class="sc-fhHczv cpmIbm"
      >
         
        <div
          data-testid="test-buttons"
        >
          Test Buttons
        </div>
         
      </div>
    </div>
  </div>
</div>
`;

exports[`FormModalHeaderWrapper renders with empty content 1`] = `
<div>
  <div
    class="html-div x1ghz6dp x1717udv xet4sn1 x13zp6ng x78zum5 xdt5ytf x1us19tq x5yr21d xh8yej3"
    data-theme="dark"
  >
     
    <div
      class="sc-bRKDuR dGUPt"
    >
      <div
        class="sc-hvigdm dEdrNg"
      >
         
         
      </div>
      <div
        class="sc-fhHczv cpmIbm"
      >
         
         
      </div>
    </div>
  </div>
</div>
`;

exports[`FormModalHeaderWrapper renders without buttons 1`] = `
<div>
  <div
    class="html-div x1ghz6dp x1717udv xet4sn1 x13zp6ng x78zum5 xdt5ytf x1us19tq x5yr21d xh8yej3"
    data-theme="dark"
  >
     
    <div
      class="sc-bRKDuR dGUPt"
    >
      <div
        class="sc-hvigdm dEdrNg"
      >
         
        <div
          data-testid="test-children"
        >
          Test Children
        </div>
         
      </div>
      <div
        class="sc-fhHczv cpmIbm"
      >
         
         
      </div>
    </div>
  </div>
</div>
`;

exports[`FormModalHeaderWrapper renders without children 1`] = `
<div>
  <div
    class="html-div x1ghz6dp x1717udv xet4sn1 x13zp6ng x78zum5 xdt5ytf x1us19tq x5yr21d xh8yej3"
    data-theme="dark"
  >
     
    <div
      class="sc-bRKDuR dGUPt"
    >
      <div
        class="sc-hvigdm dEdrNg"
      >
         
         
      </div>
      <div
        class="sc-fhHczv cpmIbm"
      >
         
        <div
          data-testid="test-buttons"
        >
          Test Buttons
        </div>
         
      </div>
    </div>
  </div>
</div>
`;
